--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -21,6 +21,10 @@
 
   .playlist-section {
     padding: 1rem 2rem;
+
+    @media (max-width: 599px) {
+      padding-right: 0;
+    }
   }
 
   .iframe-wrapper,
