--- a/packages/ia-components/variables.less
+++ b/packages/ia-components/variables.less
@@ -1,5 +1,7 @@
 // Variables - adding here until we update design system
 @audio-player-mobile-max-width: 480px;
+@audio-player-tablet-min-width: 481px;
+@audio-player-tablet-max-width: 767px;
 @audio-player-desktop-min-width: 768px;
 @audio-player-desktop-break: 950px;
 
