--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -110,6 +110,7 @@
         overflow: hidden;
         color: #fff;
         opacity: 0.5;
+        float: left;
         img {
           height: 2rem;
         }
