--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -40,6 +40,11 @@
       max-width: 100%;
       max-height: 100%;
     }
+    .iaux-player-wrapper {
+      position: absolute;
+      width: 100%;
+      bottom: 0px;
+    }
   }
 
   .iframe-wrapper {
