Resolve code review issues for Horizontal radio group component

--- a/packages/ia-components/sandbox/selectors/horizontal-radio-group/horizontal-radio-group.less
+++ b/packages/ia-components/sandbox/selectors/horizontal-radio-group/horizontal-radio-group.less
@@ -37,6 +37,9 @@
   }
 
   input[type='radio'] {
+    // hide radio for styling,
+    // the radio set should look like a button group
+    // with only one "on" at a given time
     display: none;
   }
 }
