Fix winamp link hover state in music player webdev-2058

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -106,11 +106,14 @@
       }
 
       .webamp-link {
+        &:hover {
+          text-decoration: none;
+        }
         display: inline-block;
         overflow: hidden;
         color: #fff;
         opacity: 0.5;
-        float: left;
+        float: left; // keep this for safari alignment
         img {
           height: 2rem;
         }
