Theatre viewer styling with tabs WEBDEV-2052

--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -1,3 +1,4 @@
+
 .theatre__audio-player {
   margin: 1rem auto 2rem;
   width: 97%;
@@ -16,7 +17,22 @@
   }
 
   .content-window {
-    border: .1rem solid;
+    border-bottom: none;
+    border-top: .1rem solid;
+    border-left: .1rem solid;
+    border-right: .1rem solid;
+  }
+
+  .tabs {
+
+    .tab-bottom{
+      width: 100%;
+      border-top: 1px solid #fff;
+    }
+
+    .option.selected {
+      border-top-color: black;
+    }
   }
 
   .playlist-section {
