--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -25,6 +25,7 @@
   .playlist-section {
     padding-top: 1rem;
     padding-bottom: 2rem;
+    overflow-y: scroll;
   }
   @media (max-width: @audio-player-mobile-max-width) {
     // Channel labels only show logos at mobile view
@@ -49,6 +50,9 @@
       display: block;
       text-align: center;
     }
+    .playlist-section {
+      height: 30rem;
+    }
   }
   @media (min-width: @audio-player-desktop-min-width) {
     padding-left: 1rem;
@@ -64,6 +68,11 @@
       width: 64%;
       margin-left: 1rem;
       padding-right: 2rem;
+      max-height: 48rem;
+
+      .flexbox-pagination {
+        max-height: 48rem;
+      }
     }
 
     .channel-controls {
