--- a/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
+++ b/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
@@ -44,12 +44,12 @@
       }
 
       .track-title {
-        width: 80%
+        width: 78%;
+        padding-left: 2%;
       }
 
       .track-length {
         width: 15%;
-        padding-right: 0;
       }
     }
 
@@ -68,8 +68,7 @@
     }
 
     .track-title {
-      width: 75%;
-
+      width: 74%;
       i {
         font-weight: 100;
       }
