--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -21,6 +21,14 @@
     border-top: .1rem solid;
     border-left: .1rem solid;
     border-right: .1rem solid;
+    position: relative;
+
+    .background-photo {
+      display: block;
+      margin: auto;
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 
   .tabs {
@@ -50,12 +58,6 @@
   }
 
   .ia-player-wrapper {
-    .background-photo {
-      display: block;
-      margin: auto;
-      max-width: 100%;
-      max-height: 100%;
-    }
     .iaux-player-wrapper {
       position: absolute;
       width: 100%;
@@ -64,6 +66,9 @@
   }
 
   .iframe-wrapper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
     padding-bottom: 75%; // 4:3 ratio
     .iframe {
       position: absolute;
