--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -1,3 +1,4 @@
+@import '../../../../variables.less';
 
 .theatre__audio-player {
   margin: 1rem auto 2rem;
@@ -28,6 +29,12 @@
       margin: auto;
       max-width: 100%;
       max-height: 100%;
+
+      &.blur {
+        max-width: 96%;
+        max-height: 97%;
+        margin-top: 3%;
+      }
     }
   }
 
@@ -65,17 +72,44 @@
     }
   }
 
+  .third-party-warning,
   .iframe-wrapper {
     position: absolute;
     top: 0;
     bottom: 0;
-    padding-bottom: 75%; // 4:3 ratio
+  }
+
+  .iframe-wrapper {
     .iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
+    }
+  }
+  
+  .third-party-warning {
+    .warning-text {
+      padding: 0 2rem 1rem;
+      border-top: .1rem solid @f-white;
+      border-bottom: .1rem solid @f-white;
+      background-color: @3-gray;
+      margin-top: 30%;
+    }
+    .iconochive-info {
+      padding-right: 1rem;
+    }
+
+    .helper-text {
+      margin-bottom: 2rem;
+    }
+
+    .continue-button {
+      border-radius: 1.5rem;
+      background-color: black;
+      color: @f-white;
+      border: 1px solid @f-white;
+      display: block;
+      margin: auto;
+      height: 30px;
     }
   }
 }
