tracklist should only show scroll bar if scroll is needed

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -23,7 +23,7 @@
   .playlist-section {
     padding-top: 1rem;
     padding-bottom: 2rem;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   @media (max-width: @audio-player-mobile-max-width) {
     // Channel labels only show logos at mobile view
