Audio player: fixing space between channels & tracklist + hiding track buttons on single column view

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -21,7 +21,7 @@
   }
 
   .playlist-section {
-    padding-top: 1rem;
+    margin-top: 2rem;
     padding-bottom: 2rem;
     overflow-y: auto;
   }
@@ -50,6 +50,10 @@
     }
     .playlist-section {
       height: 30rem;
+
+      .page-buttons {
+        display: none;
+      }
     }
   }
   @media (min-width: @audio-player-desktop-min-width) {
