Music player: hiding pagination arrows at single column view

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -58,7 +58,8 @@
     .playlist-section {
       height: 30rem;
 
-      .page-buttons {
+      .page-buttons,
+      .pagination-arrow {
         display: none;
       }
     }
