--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -22,6 +22,7 @@
     border-left: .1rem solid;
     border-right: .1rem solid;
     position: relative;
+    overflow: hidden;
 
     .background-photo {
       display: block;
@@ -71,10 +72,12 @@
     bottom: 0;
     .iframe {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0.1rem;
+      left: 0.1rem;
+      width: 99.9%;
+      height: 99.9%;
+      right: 0.1rem;
+      bottom: 0.1rem;
     }
   }
 }
