--- a/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
+++ b/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
@@ -25,9 +25,11 @@
     text-align: left;
     background: transparent;
     color: inherit;
-    padding-right: .5rem;
-    padding-left: .5rem; 
+    padding-right: 0;
+    padding-left: 0;
     min-height: 4rem;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
 
     &.selected {
       border-color:#00A1DD;
