--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -28,8 +28,24 @@
     overflow-y: auto;
   }
 
-  @media (max-width: @audio-player-channel-label-no-display) {
+  @media (min-width: @audio-player-desktop-min-width) and (max-width: 960px) {
     .channel-controls {
+      width: 70%;
+      .option {
+        width: 25%;
+        text-align: center;
+      }
+      .channel-label {
+        display: none;
+      }
+    }
+  }
+  @media (max-width: @audio-player-channel-label-no-display)   {
+    .channel-controls {
+      .option {
+        width: 25%;
+        text-align: center;
+      }
       .channel-label {
         display: none;
       }
@@ -64,31 +80,75 @@
       }
     }
   }
+
   @media (min-width: @audio-player-desktop-min-width) {
-    padding-left: 1rem;
-
-    .media-section,
-    .playlist-section {
-      float: left;
-    }
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    
     .media-section {
-      width: 34%;
+      grid-area: md;
     }
-    .playlist-section {
-      width: 64%;
-      margin-left: 1rem;
-      padding-right: 2rem;
 
-      .flexbox-pagination {
-        height: 35rem;
-      }
+    .grid-right {
+      grid-area: hd;
+    }
+
+    padding-left: 1rem;
+    padding-bottom: 2rem;
+
+    .media-section {
+      max-width: 40rem;
+      margin-right: 2rem;
+    }
+
+    .playlist-section {
+      padding-right: 1rem;
+
     }
 
     .channel-controls {
-      margin-left: 1%;
       display: inline;
     }
+  }
 
+  @media (min-width: @audio-player-desktop-min-width) and (max-width: @audio-player-desktop-max-width) {
+    
+    grid-template-areas: "md md md md hd hd hd hd hd" "md md md md hd hd hd hd hd" "md md md md hd hd hd hd hd";
+
+    .playlist-section {
+      height: 35rem;
+
+      .pagination-arrow,
+      .page-buttons {
+        display: none;
+      }
+
+        &.column {
+          > * {
+            width: 100%;
+          }
+        }
+    }
+  }
+
+  @media (min-width: @audio-player-widescreen-min-width) {
+    grid-template-areas: "md md md hd hd hd hd hd hd" "md md md hd hd hd hd hd hd" "md md md hd hd hd hd hd hd";
+
+
+    .playlist-section {
+
+      .flexbox-pagination {
+        height: 35rem;
+        float: unset;
+
+        &.column {
+          > * {
+            width: 49%;
+          }
+        }
+      }
+    }
   }
 
   .channel-controls .channel-icon,
