Track list: update mobile view default height

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -72,7 +72,7 @@
       text-align: center;
     }
     .playlist-section {
-      height: 30rem;
+      max-height: 30rem;
 
       .page-buttons,
       .pagination-arrow {
