--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -23,12 +23,14 @@
     border-right: .1rem solid;
     position: relative;
     overflow: hidden;
+    max-height: inherit;
+    padding: .1rem;
 
     .background-photo {
       display: block;
       margin: auto;
       max-width: 100%;
-      max-height: 100%;
+      max-height: inherit;
     }
   }
 
