changed css properties of tracks when hovered

--- a/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
+++ b/packages/ia-components/sandbox/theatres/components/track-list/track-list.less
@@ -82,4 +82,10 @@
       float: right;
     }
   }
+  .track:hover{
+    background:white;
+    border-radius: .5rem;
+    border-color:#00A1DD;
+    color:black
+  }
 }
