--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -39,7 +39,7 @@
       font-size: 10rem;
       text-align: center;
       padding-top: 14%;
-      min-height: 20rem;
+      height: 30rem;
     }
   }
 
