--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -53,6 +53,10 @@
   }
 
   @media (max-width: @audio-player-tablet-max-width) {
+    .media-section {
+      margin-bottom: 2rem;
+    }
+
     .channel-controls {
       margin-left: auto;
       margin-right: auto;
@@ -84,11 +88,13 @@
     }
 
     padding-left: 1rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 
     .media-section {
       max-width: 40rem;
       margin-right: 2rem;
+      margin-left: 1rem;
+      margin-bottom: 1rem;
     }
 
     .playlist-section {
