Users can now freely navigate to other channels while playing current track

--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -17,7 +17,7 @@
   }
 
   .content-window {
-    border-bottom: none;
+    border-bottom: .1rem solid;
     border-top: .1rem solid;
     border-left: .1rem solid;
     border-right: .1rem solid;
@@ -47,13 +47,8 @@
 
   .tabs {
 
-    .tab-bottom{
-      width: 100%;
-      border-top: 1px solid #fff;
-    }
-
     .option.selected {
-      border-top-color: black;
+      border-top-color: white;
     }
   }
 
