--- a/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
+++ b/packages/ia-components/sandbox/theatres/components/audio-player/audio-player.less
@@ -15,7 +15,7 @@
   }
 
   .content-window {
-    border-bottom: .1rem solid;
+    border-bottom: none;
     border-top: .1rem solid;
     border-left: .1rem solid;
     border-right: .1rem solid;
