--- a/packages/ia-design-system/src/styles/utils.less
+++ b/packages/ia-design-system/src/styles/utils.less
@@ -1,2 +1,7 @@
 // This file is for mixins and other LESS utilities that help generate CSS. This file should not generate any CSS on
 // its own — other files will generate the CSS by using the mixins defined in this file.
+.appearance(@value) {
+  -moz-appearance: @value;
+  -webkit-appearance: @value;
+  appearance: @value;
+}
