--- a/packages/ia-components/sandbox/selectors/horizontal-radio-group/horizontal-radio-group.less
+++ b/packages/ia-components/sandbox/selectors/horizontal-radio-group/horizontal-radio-group.less
@@ -15,10 +15,16 @@
       border-color: inherit;
       border-bottom-left-radius: .5rem;
       border-bottom-right-radius: .5rem;
+      margin-top: -.1rem;
+      opacity: .5;
+      margin-right: .5rem;
 
       &.selected {
-        margin-top: -.1rem;
         padding-top: .5rem;
+        opacity: 1;
+      }
+
+      &:last-child {
         border-right: .1rem solid;
       }
     }
