--- a/packages/ia-components/sandbox/audio-players/audio-player.less
+++ b/packages/ia-components/sandbox/audio-players/audio-player.less
@@ -41,6 +41,11 @@
       padding-top: 14%;
       height: 20rem;
     }
+
+    & .BRprogresspopup {
+      color: @3-gray;
+      text-align: center;
+    }
   }
 
   .tabs {
