--- a/packages/ia-components/index.less
+++ b/packages/ia-components/index.less
@@ -5,5 +5,6 @@
 @import './sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less';
 @import './sandbox/track-lists/track-list.less';
 @import './sandbox/audio-players/audio-player.less';
+@import './sandbox/audio-players/youtube-player.less';
 @import './sandbox/selectors/horizontal-radio-group/horizontal-radio-group.less';
 @import './sandbox/pagination/pagination.less';
