Music Player, JWPlayer: If there aren't any tracks, do not show or instantiate the player

--- a/packages/ia-components/sandbox/audio-players/audio-player.less
+++ b/packages/ia-components/sandbox/audio-players/audio-player.less
@@ -47,6 +47,16 @@
       color: @3-gray;
       text-align: center;
     }
+
+    .media-player {
+      height: 0;
+      &.with-waveform {
+        height: 14rem;
+      }
+      &.no-waveform {
+        height: 4.4rem;
+      }
+    }
   }
 
   .tabs {
