reduce fuzziness around track artist display

--- a/packages/ia-components/sandbox/track-lists/track-list.less
+++ b/packages/ia-components/sandbox/track-lists/track-list.less
@@ -71,8 +71,8 @@
 
     .track-title {
       width: 74%;
-      i {
-        font-weight: 100;
+      .track-artist {
+        font-weight: 200;
       }
     }
 
