--- a/packages/ia-components/sandbox/language-select/language-select.less
+++ b/packages/ia-components/sandbox/language-select/language-select.less
@@ -62,6 +62,7 @@
     a {
       display: block !important;
       padding: (.2 * @rem) (2.5 * @rem) !important;
+      white-space: nowrap;
       &:hover {
         color: @@text_highlight_color;
         background: @text_active_color;
