Correction of comment

--- a/packages/ia-components/sandbox/language-select/language-select.less
+++ b/packages/ia-components/sandbox/language-select/language-select.less
@@ -41,7 +41,7 @@
     &.visible {
       display: block;
     }
-    // It needs a more specific classname else the body.navia .navbar #nav-dweb ul { display:closed } beats the one below
+    // It needs a more specific classname else the body.navia .navbar #nav-dweb ul { display:inline } beats the one below
     &.notvisible {
       display: none !important;
     }
