updated text color

--- a/packages/ia-components/sandbox/language-select/language-select.less
+++ b/packages/ia-components/sandbox/language-select/language-select.less
@@ -1,5 +1,5 @@
 @dropdown_background_color: #222222;
-@text_color: #b9b9b9;
+@text_color: #999999;
 @text_highlight_color: dropdown_background_color;
 @text_active_color: #ffffff;
 @dropdown_border_color: #333333;
