Replaces inherited Petabox styles with component styles

--- a/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/sandbox/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -6,7 +6,7 @@
   padding: .5rem;
   overflow: hidden;
   color: @f-white;
-  
+
   .submenu {
     position: absolute;
     right: 6px;
@@ -262,5 +262,14 @@
         }
       }
     }
+  }
+
+  .bookreader-wrapper {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0.1px 0 0 0;
+    overflow: hidden;
+    background-color: black;
   }
 }
