liner notes in br v5 work - simplify loader, listen for booknav postinit to load bookreader

--- a/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -271,5 +271,17 @@
     padding: 0.1px 0 0 0;
     overflow: hidden;
     background-color: black;
+    
+    ia-bookreader {
+      display: block;
+      position: relative;
+      height: inherit;
+      width: inherit;
+    }
+
+    #liner-notes {
+      border: 1px solid green;
+      min-height: 400px;
+    }
   }
 }
