--- a/packages/ia-components/components/audio-players/audio-player.less
+++ b/packages/ia-components/components/audio-players/audio-player.less
@@ -16,6 +16,7 @@
   }
 
   .content-window {
+    height: 440px;
     border-bottom: none;
     border-top: .1rem solid;
     border-left: .1rem solid;
@@ -109,3 +110,15 @@
     }
   }
 }
+
+/* BookReader */
+.BRfullscreenActive item-navigator {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+/* BookReader */
