iaux audio player with liner notes - use PB style item-nav loading & update styles to make it fit in small window

--- a/packages/ia-components/components/audio-players/audio-player.less
+++ b/packages/ia-components/components/audio-players/audio-player.less
@@ -112,13 +112,18 @@
 }
 
 /* BookReader */
-.BRfullscreenActive item-navigator {
+.BRfullscreenActive .bookreader-wrapper item-navigator {
   position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
+  background-color: black;
+}
+
+.bookreader-wrapper #BookReader {
+  height: 440px;
 }
 
 /* BookReader */
