Audio player with liner notes: use BookReader v5 (#555)
* Audio player with liner notes: use BookReader v5
* liner notes in br v5 work - simplify loader, listen for booknav postinit to load bookreader
* use PB style item-nav loading & update styles to make it fit in small window

* liner notes: update storybook scripts to point to archive.org + liner notes readme to note that dev is in flux

--- a/packages/ia-components/components/audio-players/audio-player.less
+++ b/packages/ia-components/components/audio-players/audio-player.less
@@ -16,6 +16,7 @@
   }
 
   .content-window {
+    height: 440px;
     border-bottom: none;
     border-top: .1rem solid;
     border-left: .1rem solid;
@@ -109,3 +110,20 @@
     }
   }
 }
+
+/* BookReader */
+.BRfullscreenActive .bookreader-wrapper item-navigator {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+}
+
+.bookreader-wrapper #BookReader {
+  height: 440px;
+}
+
+/* BookReader */
