iaux audio player, css - set media window's height to a variable

--- a/packages/ia-components/components/audio-players/audio-player.less
+++ b/packages/ia-components/components/audio-players/audio-player.less
@@ -16,7 +16,7 @@
   }
 
   .content-window {
-    height: 440px;
+    height: @content-window-height;
     border-bottom: none;
     border-top: .1rem solid;
     border-left: .1rem solid;
@@ -123,7 +123,7 @@
 }
 
 .bookreader-wrapper #BookReader {
-  height: 440px;
+  height: @content-window-height;
 }
 
 /* BookReader */
