--- a/packages/ia-components/variables.less
+++ b/packages/ia-components/variables.less
@@ -7,6 +7,7 @@
 @audio-player-widescreen-min-width: 1201px;
 @audio-player-extra-widescreen-min-width: 1600px;
 @audio-player-desktop-break: 950px;
+@content-window-height: 440px;
 
 @width-500: 500px;
 // colors
