--- a/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -2,9 +2,23 @@
 
 @audio-player-channel-label-no-display: 600px;
 
+/* BookReader */
+.BRfullscreenActive .bookreader-wrapper item-navigator {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+}
+.bookreader-wrapper #BookReader.fullscreenActive {
+  max-height: unset;
+}
+/* BookReader */
+
 .audio-with-youtube-spotify {
   max-height: inherit;
-  display: flex;
   color-scheme: dark;
   padding: .5rem;
   overflow: hidden;
@@ -55,6 +69,14 @@
   }
 
   @media (max-width: @audio-player-tablet-max-width) {
+    .content-window,
+    #BookReader {
+      height: 300px;
+    }
+    .content-window .album-cover {
+      height: calc(300px - 45px); // 45px is the height of the player controls
+    }
+
     .media-section {
       margin-bottom: 1rem;
     }
@@ -75,33 +97,32 @@
     }
   }
 
-  @media (min-width: @audio-player-desktop-min-width) {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-template-areas: "md md md md md md md hd hd hd hd hd";
+  @media (min-width: @audio-player-desktop-min-width)  {
+  border: 1px solid red;
+  display: flex;
+  min-height: 450px;
+
+    .content-window,
+    #BookReader {
+      height: 400px;
+    }
+
+    .content-window .album-cover {
+      height: calc(400px - 45px); // 45px is the height of the player controls
+    }
+
+    .content-window .album-cover.no-cover {
+      height: calc(400px - 140px); // 140px is the height of the player controls w/ waveform
+    }
 
     .media-section {
       display: inline-block;
-      width: 49%;
-
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 3;
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 6;
-      grid-area: md;
+      width: 51%;
     }
 
     .grid-right {
       display: inline-block;
-      width: 48%;
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 3;
-      -ms-grid-column: 7;
-      -ms-grid-column-span: 6;
-      grid-area: hd;
+      width: 47%;
     }
 
     padding-left: 1rem;
@@ -126,10 +147,8 @@
     }
 
     .playlist-section {
-      max-height: 98%;
+      max-height: 90%;
       overflow: auto;
-      // height: 42rem;
-      // height: 35rem;
 
       .pagination-arrow,
       .page-buttons {
@@ -146,7 +165,6 @@
 
   @media (max-width: @audio-player-desktop-max-width) {
     .playlist-section {
-
       .flexbox-pagination {
         flex-wrap: nowrap;
       }
@@ -154,28 +172,17 @@
   }
 
   @media(min-width: @audio-player-widescreen-min-width) {
-    grid-template-areas: "md md md md md hd hd hd hd hd hd hd";
-
     .media-section {
-      // -ms-grid-row: 1;
-      // -ms-grid-row-span: 3;
-      // -ms-grid-column: 1;
-      // -ms-grid-column-span: 4;
       margin: 0;
-      width: 31%;
+      width: 40%;
     }
     .grid-right {
-      width: 67%;
-
-      // -ms-grid-row: 1;
-      // -ms-grid-row-span: 3;
-      // -ms-grid-column: 5;
-      // -ms-grid-column-span: 8;
+      width: 58%;
+      margin-left: 1%;
     }
     .playlist-section {
       .flexbox-pagination {
-        height: 42rem;
-        // height: 35rem;
+        height: 400px;
         float: unset;
 
         &.column {
@@ -190,17 +197,11 @@
   @media (min-width: @audio-player-extra-widescreen-min-width) {
     // may not need anymore
     .media-section {
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 3;
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 3;
+
     }
 
     .grid-right {
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 3;
-      -ms-grid-column: 4;
-      -ms-grid-column-span: 9;
+
     }
 
     .playlist-section {
