mobile view tracklist update

--- a/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
+++ b/packages/ia-components/components/theatres/with-youtube-spotify/audio-with-youtube-spotify.less
@@ -27,7 +27,6 @@
   max-height: inherit;
   color-scheme: dark;
   padding: .5rem;
-  overflow: hidden;
   color: @f-white;
 
   .submenu {
@@ -95,7 +94,7 @@
       text-align: center;
     }
     .playlist-section {
-      max-height: 20rem;
+      max-height: 170px;
 
       .page-buttons,
       .pagination-arrow {
